--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,99 +1,57 @@
 :root {
-  --navbar-scale: 0.7; /* 40% smaller: 1 - 0.4 = 0.6 */
-  --navbar-item-size: calc(70px * var(--navbar-scale));
-  --navbar-font-size: calc(14px * var(--navbar-scale));
-  --navbar-icon-size: calc(24px * var(--navbar-scale));
+    --navbar-scale: 0.6;
+    --navbar-item-size: calc(70px * var(--navbar-scale));
+    --navbar-font-size: calc(14px * var(--navbar-scale));
+    --navbar-icon-size: calc(24px * var(--navbar-scale));
 }
-
-*, *:before, *:after {
-  box-sizing: border-box;
+.navbar {
+    background-color: #1a237e !important;
+    border-radius: calc(var(--navbar-item-size) / 4);
+    padding: 0;
 }
-
-body {
-  margin: 0;
-  padding: 0;
-  background: white;
-  color: white;
-  font-family: 'Montserrat', sans-serif;
-  font-size: var(--navbar-font-size);
-  line-height: 1.4;
+.navbar-nav {
+    display: flex;
+    flex-direction: row;
 }
-
-nav {
-  position: fixed;
-  height: auto;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  background: transparent;
+.nav-item {
+    width: var(--navbar-item-size);
+    height: var(--navbar-item-size);
 }
-
-nav ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
+.nav-link {
+    color: white !important;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    padding: 0;
 }
-
-nav ul li {
-  position: relative;
-  width: var(--navbar-item-size);
-  height: var(--navbar-item-size);
-  cursor: pointer;
-  background: #1a237e;
-  text-transform: uppercase;
-  transition: all .4s ease-out;
+.nav-link:hover .icon {
+    transform: translateY(-100%);
 }
-
-nav ul li:before {
-  position: absolute;
-  background: lightblue;
-  color: #1a237e;
-  top: 0;
-  right: var(--navbar-item-size);
-  width: var(--navbar-item-size);
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: bold;
-  font-size: var(--navbar-font-size);
-  transform: perspective(400px) rotateY(-90deg);
-  transform-origin: 100% 100%;
-  transition: all .4s ease-out;
+.nav-link:hover::after {
+    transform: translateY(0);
 }
-
-nav ul li:nth-child(1):before { content: "Apply"; }
-nav ul li:nth-child(2):before { content: "Chat"; }
-nav ul li:nth-child(3):before { content: "Build"; }
-nav ul li:nth-child(4):before { content: "Manage"; }
-nav ul li:nth-child(5):before { content: "Models"; }
-
-nav ul li:hover {
-  transform: translateX(var(--navbar-item-size));
+.nav-link::after {
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: lightblue;
+    color: #1a237e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: var(--navbar-font-size);
+    transform: translateY(100%);
+    transition: transform 0.4s ease-out;
 }
-
-nav ul li:hover:before {
-  opacity: 1;
-  transform: perspective(400px) rotateY(0deg) scale(1);
-}
-
-nav ul li > div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  background: transparent;
-  transition: all .4s ease-out;
-}
-
-nav ul li:hover > div {
-  transform: perspective(400px) rotateY(-90deg);
-}
-
 .icon {
-  font-size: var(--navbar-icon-size);
-  color: white;
+    font-size: var(--navbar-icon-size);
+    transition: transform 0.4s ease-out;
 }
