--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,22 +1,33 @@
 :root {
-    --navbar-scale: 0.6;
-    --navbar-item-size: calc(70px * var(--navbar-scale));
-    --navbar-font-size: calc(14px * var(--navbar-scale));
-    --navbar-icon-size: calc(24px * var(--navbar-scale));
+    --navbar-scale: 0.7;
+    --navbar-item-size: calc(80px * var(--navbar-scale));
+    --navbar-font-size: calc(16px * var(--navbar-scale));
+    --navbar-icon-size: calc(28px * var(--navbar-scale));
+    --secondary-color: #1a237e;
+    --primary-color: #4a90e2;
+    --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    --accent-color: #e74c3c;
+    --active-color: lightblue; /* New color for active tab */
 }
+
 .navbar {
-    background-color: #1a237e !important;
+    background-color: var(--primary-color) !important;
     border-radius: calc(var(--navbar-item-size) / 4);
-    padding: 0;
+    padding: 10px;
+    box-shadow: var(--box-shadow);
 }
+
 .navbar-nav {
     display: flex;
     flex-direction: row;
 }
+
 .nav-item {
     width: var(--navbar-item-size);
     height: var(--navbar-item-size);
+    transition: transform 0.3s ease;
 }
+
 .nav-link {
     color: white !important;
     width: 100%;
@@ -27,13 +38,28 @@
     position: relative;
     overflow: hidden;
     padding: 0;
+    transition: background-color 0.3s ease, transform 0.2s ease;
 }
+
+.nav-link.active {
+    /* background-color: var(--active-color); */
+    border-bottom: 3px solid var(--accent-color);
+    transform: scale(1.05);
+}
+
+.nav-link:hover {
+    background-color: var(--accent-color);
+    transform: scale(1.05);
+}
+
 .nav-link:hover .icon {
     transform: translateY(-100%);
 }
+
 .nav-link:hover::after {
     transform: translateY(0);
 }
+
 .nav-link::after {
     content: attr(data-text);
     position: absolute;
@@ -51,6 +77,7 @@
     transform: translateY(100%);
     transition: transform 0.4s ease-out;
 }
+
 .icon {
     font-size: var(--navbar-icon-size);
     transition: transform 0.4s ease-out;
