--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -132,3 +132,10 @@ body {
 .btn-close:hover {
     opacity: .75;
 }
+
+.auto-resize {
+    overflow: hidden;
+    resize: none;
+    min-height: 60px;
+    max-height: 300px;
+}
