--- a/public/css/models.css
+++ b/public/css/models.css
@@ -45,7 +45,7 @@
     margin-bottom: 5px;
 }
 
-.btn-add-model, .edit-btn, .delete-btn {
+.btn-add-model, .edit-btn, .delete-btn, .duplicate-btn {
     background-color: var(--primary-color);
     color: white;
     border: none;
@@ -57,7 +57,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.btn-add-model:hover, .edit-btn:hover, .delete-btn:hover {
+.btn-add-model:hover, .edit-btn:hover, .delete-btn:hover, .duplicate-btn:hover {
     background-color: var(--secondary-color);
     transform: translateY(-2px);
 }
