--- a/public/css/sidepanel.css
+++ b/public/css/sidepanel.css
@@ -77,7 +77,7 @@ body, html {
 
 .navbar {
     background-color: var(--primary-color) !important;
-    /* border-radius: calc(var(--navbar-item-size) / 4); */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 0px;
     padding: 0px 5px 0px 5px;
     box-shadow: var(--box-shadow);
