--- a/public/css/apis.css
+++ b/public/css/apis.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #3498db;
+    --primary-color: #4a90e2;
     --secondary-color: #2ecc71;
     --background-color: #ecf0f1;
     --text-color: #2c3e50;
